# hello_tonic

./: Cargo.toml  build.rs
proto/: helloworld.proto
src/: client.rs  hello_world.rs  main.rs  server.rs
