[package]
name = "hello_tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
prost-build = "0.11.9"
tonic-build = "0.9.2"
