[package]
name = "hello_tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
